# c5_p24_eindopdracht

./: .gitignore  README.md  controllerversie2.py  hmi_interface_versie10.py  hmi_interface_versie11.py  hmi_interface_versie12.py  hmi_interface_versie6.py
controller/: package.xml  setup.py
controller/controller/: mock_vision.py  state_machine.py  system_supervisor.py
controller/launch/: full_system.launch.py  main_system.launch.py  robot_and_manipulator.launch.py
manipulatie/: package.xml  setup.cfg  setup.py
manipulatie/manipulatie/: gripper.py  manipulator.py
manipulation/: package.xml  setup.py
my_moveit_python/: CMakeLists.txt  README.md  package.xml
my_moveit_python/my_moveit_python/: __init__.py  my_moveit_python.py
my_ufactory_ROS2/.github/: FUNDING.yml
my_ufactory_ROS2/.github/workflows/: documentation.yml
my_ufactory_ROS2/documentation/documentation/: install.md  real_robot.md
my_ufactory_ROS2/install/: install.bash
my_ufactory_ROS2/my_uf_bringup/launch/: movegroup.launch.py  real_robot.launch.py  view_environment.launch.py
my_ufactory_ROS2/my_uf_demo/my_uf_demo/: demo.py
my_ufactory_ROS2/my_uf_description/: setup.py
my_ufactory_ROS2/my_uf_description/meshes/: Blokkade_Link.STL  Bodemplaat_Link.STL  CamStatief_Link.STL  Camera_Link.STL  Gripper_Lite.STL  Magazijn_Link.STL  Tussenwand_Link.STL
my_ufactory_ROS2/my_uf_description/urdf/: assembly.urdf.xacro  uf_robot.urdf.xacro
my_ufactory_ROS2/my_uf_description/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ufactory_ROS2/my_uf_description/urdf/log/: latest_build
my_ufactory_ROS2/my_uf_moveit_config/: .setup_assistant  package.xml
my_ufactory_ROS2/my_uf_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  uf_robot.srdf  uf_robot.urdf.xacro
project_interfaces/: CMakeLists.txt  package.xml
project_interfaces/msg/: ObjectData.msg  ObjectDataArray.msg
project_interfaces/srv/: GetObjectData.srv  Manipulator.srv  VoorwerpData.srv
pymoveit2/pymoveit2/: README.md
user_interface/: package.xml  setup.py
user_interface/user_interface/: hmi_interface_versie12.py  rviz_screen_publisher.py
vision/: LICENSE  camera_calibration_640x480_charuco.pkl  package.xml  setup.cfg  setup.py
vision/Send_to_c5_p24_eindopdracht/msg/: ObjectData.msg  ObjectDataArray.msg
vision/Send_to_c5_p24_eindopdracht/project_interfaces/: CMakeLists.txt  package.xml
vision/Send_to_c5_p24_eindopdracht/srv/: ObjectDetection.srv
vision/config/: config.py  vision.yaml
vision/config/calibration/: camera_calibration.py  generate_charuco_board.py
vision/dataset/labels/: 046622f0-77b7-4f4e-9b75-cd25ff9196ac.txt  19c9ca97-705a-45ac-9438-51ac27690c6a.txt  1ddbc732-f746-48b6-ae47-e64342ce88c9.txt  2df45029-beb6-40fe-9aa4-def239783c1c.txt  2ed4276c-ad2b-478c-bc0e-adb2f615c7f8.txt  2ffce891-1786-492f-bbed-1c0ed1046da6.txt  459b660f-7816-4595-b53e-6556a3636d85.txt  517910c1-11d0-4c13-80cb-a9f80d02488e.txt  55376fc2-4261-4671-aa88-58ed2a7c4331.txt  5beedb79-0cca-4ced-b317-6a6aa24841fd.txt  7782a7f8-df02-4aab-9c36-493576b6eb64.txt  7c6e9eb6-0f56-464a-b4b3-3c8444ab0e1a.txt  84d482b6-c63e-4d55-99c3-988aa7a3eb48.txt  8b9cbcbb-3e74-473b-91e8-d50fc0e87efa.txt  8c7eb2c5-885c-4662-9a86-9c870c2ea978.txt  8fcb7325-4e51-4d9d-9db9-b1d9600517a3.txt  90af9cd8-6420-46dd-8e1f-e087036e9c14.txt  98b010e2-ef5f-4357-8e43-068c7ba9c64d.txt  996264ce-b008-473e-a695-21f2d2dec665.txt  9ab96dba-3e40-462e-b029-ec87c5e08f27.txt  9deec97f-9392-4f4b-809f-bea7108511a3.txt  a5cab4ab-ddb9-43de-a5f1-5f8fa43075be.txt  af8d04ef-5e8b-4068-974c-8a5b94b752f0.txt  b325a26c-0523-45f8-b6d9-90b96cdaecf4.txt  d0240dc0-bdc1-4f32-a8be-8d5d06f33067.txt  d1cff6fa-05ae-4975-9b57-9c3521bb5405.txt  e483e12c-2870-467b-8e59-41f141985c10.txt  f17ead1a-afa7-4868-9c00-a61a2a79247b.txt  f44e39a1-e14b-448a-8757-22f8a423cb95.txt  f7b92a8e-63da-482d-959c-d5e1f19c130e.txt  ff7d826a-d804-421b-8a11-7a1d26861689.txt
vision/dataset/metadata/: 046622f0-77b7-4f4e-9b75-cd25ff9196ac.json  19c9ca97-705a-45ac-9438-51ac27690c6a.json  1ddbc732-f746-48b6-ae47-e64342ce88c9.json  1de4646f-88c4-44ce-9a97-7f4bd15a81aa.json  24db9dfe-1af4-4325-8ff6-ad0164fc6f51.json  2df45029-beb6-40fe-9aa4-def239783c1c.json  2ed4276c-ad2b-478c-bc0e-adb2f615c7f8.json  2ffce891-1786-492f-bbed-1c0ed1046da6.json  459b660f-7816-4595-b53e-6556a3636d85.json  517910c1-11d0-4c13-80cb-a9f80d02488e.json  55376fc2-4261-4671-aa88-58ed2a7c4331.json  5beedb79-0cca-4ced-b317-6a6aa24841fd.json  7782a7f8-df02-4aab-9c36-493576b6eb64.json  7c6e9eb6-0f56-464a-b4b3-3c8444ab0e1a.json  84d482b6-c63e-4d55-99c3-988aa7a3eb48.json  8b9cbcbb-3e74-473b-91e8-d50fc0e87efa.json  8c7eb2c5-885c-4662-9a86-9c870c2ea978.json  8fcb7325-4e51-4d9d-9db9-b1d9600517a3.json  90af9cd8-6420-46dd-8e1f-e087036e9c14.json  98b010e2-ef5f-4357-8e43-068c7ba9c64d.json  996264ce-b008-473e-a695-21f2d2dec665.json  9ab96dba-3e40-462e-b029-ec87c5e08f27.json  9deec97f-9392-4f4b-809f-bea7108511a3.json  a5cab4ab-ddb9-43de-a5f1-5f8fa43075be.json  aea7fa50-5e52-4020-9e52-271e921b820b.json  af8d04ef-5e8b-4068-974c-8a5b94b752f0.json  b325a26c-0523-45f8-b6d9-90b96cdaecf4.json  b4c58792-162b-4e8b-adb6-3590b07d2864.json  d0240dc0-bdc1-4f32-a8be-8d5d06f33067.json  d1cff6fa-05ae-4975-9b57-9c3521bb5405.json  e483e12c-2870-467b-8e59-41f141985c10.json  eb84e932-559b-45dc-b1c7-1eab5ea04a6e.json  f17ead1a-afa7-4868-9c00-a61a2a79247b.json  f44e39a1-e14b-448a-8757-22f8a423cb95.json  f7b92a8e-63da-482d-959c-d5e1f19c130e.json  ff7d826a-d804-421b-8a11-7a1d26861689.json
vision/launch/: vision.launch.py
vision/models/V0.1/: best.xml
vision/models/V0.2/: best.xml
vision/models/V0.3/: best.xml
vision/models/V0.4/: best.json  best.xml
vision/models/V0.5/: best.json  best.xml
vision/test/: test_flake8.py  test_pep257.py  test_vision_static.py
vision/vision/: vision_node.py
